--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Maintenance Manager",
-  "short_name": "Maintenance",
-  "description": "Manage equipment codes and scan QR codes for maintenance tracking",
+  "name": "Adrian's Halloween party",
+  "short_name": "HalloweenParty",
+  "description": "Gestión de QR invitados fiesta de Halloween de Adrian",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#fafafa",
@@ -9,19 +9,19 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/placeholder-logo.png",
+      "src": "/pumpkin.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/placeholder-logo.png",
+      "src": "/pumpkin.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/placeholder-logo.png",
+      "src": "/pumpkin.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
